--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -34,10 +34,19 @@
         left: 40%;
     }
 
+    .opaque {
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.5);
+        right: 100%;
+        top: 0;
+        width: 119vw;
+        height: 100%;
+    }
+
     .nav-btn {
         position: fixed;
         top: 8vw;
-        right: 3.5vw;
+        right: 4.5vw;
         width: 9vw;
         height: 4vw;
         cursor: pointer;
@@ -51,7 +60,7 @@
         font-size: 5vw;
         position: relative;
         top: 50%;
-        transform: translateY(-40%);
+        transform: translateY(-50%);
     }
 
     .menu {
@@ -59,22 +68,14 @@
         position: relative;
         cursor: pointer;
         color: hsl(240, 100%, 5%);
-        font-size: 5vw;
-        font-weight: 700;
+        font-size: 4vw;
+        font-weight: 300;
         text-decoration: none;
-        margin: 0 0 10vw 0;
+        margin: 0 0 5vw 0;
     }
 
-    .menu:hover::after {
-        content: '';
-        position: absolute;
-        width: 50%;
-        display: block;
-        height: .5vw;
-        background-color: rgb(255, 0, 0);
-        bottom: -1vw;
-        left: 50%;
-        transform: translate(-50%);
+    .menu:hover {
+        color: hsl(5, 85%, 63%);
     }
 }
 
@@ -94,6 +95,15 @@
         position: relative;
         top: 50%;
         right: 16vw;
+    }
+
+    .opaque {
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.5);
+        right: 100%;
+        top: 0;
+        width: 119vw;
+        height: 100%;
     }
 
     .nav-btn {
@@ -127,8 +137,8 @@
     .logo {
         position: relative;
         height: 3vw;
-        width: 18vw;
-        left: -4vw;
+        width: 5vw;
+        left: -5vw;
         margin: 0;
     }
 
@@ -138,6 +148,10 @@
         top: 0;
         height: 100%;
         width: 100%;
+    }
+
+    .opaque {
+        display: none;
     }
 
     .nav-btn {
@@ -158,24 +172,7 @@
     .menu {
         position: relative;
         margin: 0 0 0vw 2vw;
-        font-weight: 700;
-        font-size: 1.4vw;
-        left: 19vw;
-    }
-
-    .menu::after {
-        all:unset;
-    }
-
-    .menu:hover::after {
-        content: '';
-        position: absolute;
-        width: 50%;
-        display: block;
-        height: .25vw;
-        background-color: #FFF;
-        bottom: -1vw;
-        left: 50%;
-        transform: translate(-50%);
+        font-size: 1.1vw;
+        left: 16vw;
     }
 }
